--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,13 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.strangefac</groupId>
     <artifactId>doegac</artifactId>
-    <version>1-SNAPSHOT</version>
+    <version>1</version>
     <properties>
         <project.build.sourceEncoding>US-ASCII</project.build.sourceEncoding>
     </properties>
     <scm>
         <developerConnection>scm:git:file://.</developerConnection>
-        <tag>HEAD</tag>
+        <tag>1</tag>
     </scm>
     <dependencies>
         <dependency>
